--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.3
 contourpy==1.0.7
 cycler==0.11.0
 fonttools==4.39.3
@@ -6,6 +7,8 @@ matplotlib==3.7.1
 numpy==1.24.2
 packaging==23.1
 Pillow==9.5.0
+pyinstaller==5.10.0
+pyinstaller-hooks-contrib==2023.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
 six==1.16.0
